[package]
name = "transaction_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
rust_decimal = {version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
